# settlers-of-catan-api

./: .gitignore  Cargo.toml
catan-game-logic/: Cargo.toml
catan-game-logic/src/: bank.rs  board.rs  building.rs  development_cards.rs  game.rs  lib.rs  player.rs  resources.rs  trade.rs
