[package]
name = "catan-game-logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
anyhow = "*"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
rand = "0.8.5"
petgraph = { version = "0.6.3", features = ["serde-1"] }
